...
<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="25095" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="25095"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
            <connections>
                <outlet property="delegate" destination="bbz-4X-AYv" id="4pZ-gB-Uf0"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
...
                                </menu>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="Xbz-ms-irt"/>
                        </items>
                    </menu>
                </menuItem>
                <menuItem title="View" id="3L3-2p-Joi" userLabel="View">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="View" id="m6z-2H-VW7">
                        <items>
                            <menuItem title="Hide Sidebar" keyEquivalent="s" id="TSS-tg-L01">
                                <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                <connections>
...
